# symspellpy

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  INSTALL.rst  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: publish.yml  tests.yml  weekly.yml
docs/: conf.py  index.rst  requirements.txt
docs/_templates/: layout.html
docs/api/: abstract_distance_comparer.rst  editdistance.rst  helpers.rst  index.rst  symspellpy.rst
docs/examples/: custom_distance_comparer.rst  dictionary.rst  index.rst  lookup.rst  lookup_compound.rst  word_segmentation.rst
spellchecker/: editdistance.py  helpers.py  symspellpy.py
symspellpy/: __init__.py  __version__.py  abstract_distance_comparer.py  composition.py  editdistance.py  frequency_dictionary_en_82_765.txt  helpers.py  keyboarddistance.py  logging.py  pickle_mixin.py  suggest_item.py  symspellpy.py  verbosity.py
test/: test_editdistance.py  test_helpers.py  test_symspellpy.py  testsymspellpy.py
test/fortests/: bad_dict.txt  big_words.txt  non_en_dict.txt  separator_dict.txt  tab_dict.txt
tests/: benchmarks.ipynb  conftest.py  test_compatibility.py  test_editdistance.py  test_helpers.py  test_suggest_item.py  test_symspellpy.py  test_symspellpy_edge_cases.py  test_symspellpy_lookup.py  test_symspellpy_lookup_compound.py  test_symspellpy_pickle.py  test_symspellpy_word_segmentation.py
tests/fortests/: bad_dict.txt  below_threshold_dict.txt  big_words.txt  lookup_compound_data.json  lookup_compound_ignore_non_words_data.json  lookup_compound_replaced_words_data.json  lookup_compound_transfer_casing_data.json  lookup_compound_transfer_casing_ignore_nonwords_data.json  noisy_query_en_1000.txt  non_en_dict.txt  separator_dict.txt  word_segmentation_data.json
