[build-system]
requires = ["setuptools>=58.0.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
ignore = ["tests"]
pythonVersion = "3.8"

reportUnusedCallResult = "none"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = false
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
