[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symspellpy"
version = "6.9.0"
dependencies = [
    "editdistpy>=0.1.3",
]
requires-python = ">=3.10"
authors = [
    {name = "mmb L"},
]
description = "Python SymSpell"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["spellchecker", "symspell", "word segmentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/mammothb/symspellpy"
Documentation = "https://symspellpy.readthedocs.io/en/latest"
Changelog = "https://github.com/mammothb/symspellpy/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==6.0.0",
    "pytest-xdist==3.8.0",
]

[tool.pytest.ini_options]
addopts = "-n auto --dist loadscope"

[tool.basedpyright]
pythonVersion = "3.10"
reportUnusedCallResult = "none"

[[tool.basedpyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportAny = "none"
reportExplicitAny = "none"
reportImplicitOverride = "none"
reportPrivateLocalImportUsage = "none"
reportPrivateUsage = "none"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = false
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.setuptools.dynamic]
version = {attr = "symspellpy.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["symspellpy"]

[tool.setuptools.package-data]
symspellpy = ["frequency_*.txt"]
