[metadata]
name = symspellpy
version = attr: symspellpy.__version__
description = Python SymSpell
long_description = file: README.md
author = mmb L
url = https://github.com/mammothb/symspellpy
keywords = spellchecker, symspell, word segmentation
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6

[options.package_data]
symspellpy = frequency_*.txt

[options.packages.find]
include = symspellpy
