[metadata]
name = symspellpy
version = attr: symspellpy.__version__
description = Python SymSpell
long_description = file: README.md
long_description_content_type = text/markdown
author = mmb L
url = https://github.com/mammothb/symspellpy
project_urls =
    Documentation = https://symspellpy.readthedocs.io/en/latest/
    Changelog = https://github.com/mammothb/symspellpy/blob/master/CHANGELOG.md
keywords = spellchecker, symspell, word segmentation
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    editdistpy==0.1.1

[options.package_data]
symspellpy = frequency_*.txt

[options.packages.find]
include = symspellpy
